--- a/MySQL/Dockerfile
+++ b/MySQL/Dockerfile
@@ -1,7 +1,7 @@
 FROM mysql:8.0
 
 ENV MYSQL_ROOT_PASSWORD root
-ENV MYSQL_DATABASE practica_contenedores
+ENV MYSQL_DATABASE sistemasReservasBAck
 ENV MYSQL_USER eam-user
 ENV MYSQL_PASSWORD root
 
